# keras-mdn-layer

./: .gitignore  .travis.yml  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-app.yml
docs/: diagonal_gaussian_derivation.tex
examples/: 1-sineprediction.py  4-robojam-touch-generation.py  tflite_mdrnn.py
keras_mdn_layer/: __init__.py
keras_mdn_layer/tests/: test_mdn.py  test_mdn_math.py  test_model_builder_def.py  test_tflite.py
mdn/: __init__.py
mdn/tests/: test_mdn.py
notebooks/: .kanji_mdnrnn_model.h5.icloud  MDN-1D-sine-prediction.ipynb  MDN-2D-sine-prediction.ipynb  MDN-2D-spiral-prediction.ipynb  MDN-RNN-RoboJam-touch-generation.ipynb  MDN-RNN-kanji-generation-example.ipynb  MDN-RNN-kanji-generation-with-stateless-decoder.ipynb  MDN-RNN-time-distributed-MDN-training.ipynb  context.py  kanji-MDN-RNN-example.ipynb  mdn-testing.ipynb  working-on-time-distributed-mdn.ipynb
