[project]
name = "keras-mdn-layer"
version = "0.7.0"
description = "An MDN Layer for Keras"
authors = [
    { name = "Charles Martin", email = "cpm@charlesmartin.au" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11,<4.0"
keywords = ["mixture density layer", "neural network", "machine learning"]
classifiers = ["Topic :: Scientific/Engineering :: Artificial Intelligence"]
dependencies = [
    "numpy>=1.26.4,<3.0",
    "keras>=3.0,<4.0",
]

[project.urls]
Homepage = "https://github.com/cpmpercussion/keras-mdn-layer"
Repository = "https://github.com/cpmpercussion/keras-mdn-layer"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
flake8 = "^7.0.0"
jupyter = "^1.0.0"
matplotlib = "^3.8.4"
ipympl = "^0.9.4"
pandas = "^2.2.2"
svgwrite = "^1.4.3"
black = "^26.3.1"
coveralls = "^4.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
